# computer-vision-exercises

./: pyproject.toml
exercise1/: main.py
exercise2/: main.py  util.py
