[tool.poetry]
name = "test-python"
version = "0.1.0"
description = ""
authors = ["Leon Georgi <git@leongeorgi.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
opencv-python = "4.5.5.62"
matplotlib = "^3.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

